Fixed bootstrap collapse display

--- a/src/app/submission/sections/container/section-container.component.scss
+++ b/src/app/submission/sections/container/section-container.component.scss
@@ -15,3 +15,8 @@
   border-bottom-left-radius: $card-border-radius !important;
   border-bottom-right-radius: $card-border-radius !important;
 }
+
+:host /deep/ .card-header button {
+  box-shadow: none !important;
+  width: 100%;
+}
